<!--
  ~ Copyright (c) 2022 Contributors to the Eclipse Foundation
  ~  All rights reserved. This program and the accompanying materials
  ~  are made available under the terms of the Eclipse Public License v1.0
  ~  and Apache License v2.0 which accompanies this distribution.
  ~  The Eclipse Public License is available at http://www.eclipse.org/legal/epl-v10.html
  ~  and the Apache License v2.0 is available at http://www.opensource.org/licenses/apache2.0.php.
  ~
  ~ You may elect to redistribute this code under either of these licenses.
  -->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>expert.os.workshop.ddd</groupId>
    <artifactId>07-microstream-data</artifactId>
    <version>1.0-SNAPSHOT</version>
    <name>07-microstream-data</name>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <maven.compile.version>3.5.1</maven.compile.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <weld.se.core.version>5.1.0.Final</weld.se.core.version>
        <smallrye.config.version>3.1.1</smallrye.config.version>
        <microstream.data.version>0.0.1</microstream.data.version>
        <argLine> --add-opens java.base/java.lang=ALL-UNNAMED --add-exports java.base/sun.nio.ch=ALL-UNNAMED </argLine>
    </properties>

    <dependencies>
        <dependency>
            <groupId>io.smallrye.config</groupId>
            <artifactId>smallrye-config</artifactId>
            <version>${smallrye.config.version}</version>
        </dependency>
        <dependency>
            <groupId>org.jboss.weld.se</groupId>
            <artifactId>weld-se-core</artifactId>
            <version>${weld.se.core.version}</version>
        </dependency>
        <dependency>
            <groupId>os.expert.integration</groupId>
            <artifactId>microstream-jakarta-data</artifactId>
            <version>${microstream.data.version}</version>
        </dependency>
    </dependencies>

    <repositories>
        <repository>
            <id>jakarta.sonatype.org-snapshot</id>
            <url>https://jakarta.oss.sonatype.org/content/repositories/snapshots/</url>
            <releases>
                <enabled>false</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>oss.sonatype.org-snapshot</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
            <releases>
                <enabled>false</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
    </repositories>
</project>
